fixed table select style for better link visibility

--- a/we99-web/src/main/webapp/styles/main.css
+++ b/we99-web/src/main/webapp/styles/main.css
@@ -19,7 +19,7 @@ body {
 }
 
 .st-selected {
-    background: none repeat scroll 0% 0% #216EFF !important;
+    background: none repeat scroll 0% 0% #0F244B !important;
     color: #FFF !important;
 }
 
